# NLP-Notes

./: .gitignore  README.md  main.py  notes.md  pyproject.toml
NamtentityReconspacy/phianalyser/: README.md  main.py  pyproject.toml  transformernlp.py
NamtentityReconspacy/phianalyser/customtrain/: README.md  customtrain.py  train.py
markov/: markov.py  notes.md
models/: bigram.py  bigram_with_eval.py
sequenceModels/: rnnscarch.py  simplrnn.py
textclassification/: navisbias.py  navisbiasnotes..md
tokenization/: main.py  pyproject.toml
