[project]
name = "phianalyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "medspacy>=1.3.1",
    "presidio-analyzer>=2.2.361",
    "presidio-anonymizer>=2.2.361",
    "rapidfuzz>=3.14.3",
    "spacy>=3.8.11",
    "spacy-transformers>=1.3.9",
]
